--- a/app/src/main/res/layout/activity_movie_list_sub.xml
+++ b/app/src/main/res/layout/activity_movie_list_sub.xml
@@ -21,10 +21,16 @@
               android:layout_below="@+id/main_activity_header"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/main_activity_header"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:background="@color/material_grey_600"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="20sp"
+        android:gravity="center_horizontal"/>
 
 </RelativeLayout>
