--- a/app/src/main/res/layout/movie_detail.xml
+++ b/app/src/main/res/layout/movie_detail.xml
@@ -10,20 +10,20 @@
     >
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="DEADPOOL"
+            tools:text="DEADPOOL"
             android:id="@+id/title_details"
             android:gravity="center_horizontal"
-            android:paddingTop="30dp"
-            android:paddingBottom="30dp"
-            android:background="@android:color/black"
-            android:textSize="28sp"
-            android:textColor="@android:color/background_light"/>
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="@color/material_grey_600"
+            android:textSize="20sp"
+            />
 
         <LinearLayout
             android:id="@+id/linear_layout"
@@ -65,7 +65,9 @@
                     android:layout_height="wrap_content"
                     android:text="@string/rating_label"
                     android:id="@+id/textView2"
-                    android:textSize="22sp"/>
+                    android:textSize="22sp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -79,7 +81,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Release:"
+                    android:text="@string/release"
                     android:layout_below="@id/votes_details"
                     android:id="@+id/textView4"
                     android:textSize="22sp"/>
@@ -90,21 +92,31 @@
                     android:id="@+id/releaseDateTextView"
                     android:layout_below="@id/textView4"
                     android:textAppearance="@android:style/TextAppearance.Medium"
-                    android:textSize="22sp"/>
+                    android:textSize="22sp"
+                    tools:text="--/--/--"/>
 
                 <CheckBox
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Favorite"
+                    android:text="@string/add"
                     android:id="@+id/favorite_checkBox"
                     android:button="@null"
                     android:textSize="22sp"
                     android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
 
+                    android:layout_below="@+id/textView"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/favorite"
+                    android:id="@+id/textView"
+                    android:textSize="22sp"
                     android:layout_below="@+id/releaseDateTextView"
                     android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:paddingTop="20dp"/>
+                    android:layout_alignParentStart="true"/>
 
 
             </RelativeLayout>
