--- a/app/src/main/res/layout/movie_detail.xml
+++ b/app/src/main/res/layout/movie_detail.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".DetailActivity"
+    tools:context=".activity.DetailActivity"
     >
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -103,7 +103,7 @@
                     android:button="@null"
                     android:textSize="22sp"
                     android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
-
+                    android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                     android:layout_below="@+id/textView"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"/>
@@ -134,23 +134,15 @@
             android:layout_below="@+id/textView3"/>
 
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/frame_layout"
-            android:layout_below="@+id/overview_details"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp">
-        </FrameLayout>
-
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/frame_layout"
-            android:layout_centerHorizontal="true"
             tools:text="Reviews"
             android:id="@+id/review_header_label"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            android:layout_below="@+id/frameLayout"
+            android:layout_centerHorizontal="true"
+            android:gravity="center_horizontal"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -189,6 +181,14 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/overview_details"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/frameLayout">
+        </FrameLayout>
 
 
     </RelativeLayout>
